4th blog for the month of october added

--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,9 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="how-to-maintain-and-extend-the-life-of-industrial-fans">&emsp;-&nbsp;How to Maintain and Extend the Life of Industrial Fans</a>
+        </li>
+        <li>
           <a href="hvls-fans-vs-conventional-industrial-fans">&emsp;-&nbsp;HVLS Fans vs Conventional Industrial Fans: Which Is Better for You?</a>
         </li>
         <li>
