1st blog for the month on november added

--- a/blog.html
+++ b/blog.html
@@ -156,9 +156,31 @@
     <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="industrial-fan-maintenance-checklist-for-pune-climate" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/Industrial-Fan-Maintenance-Checklist-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>04</h5>
+                        <span>November
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="industrial-fan-maintenance-checklist-for-pune-climate" class="enitre_mouse">
+                    <h6><a href="industrial-fan-maintenance-checklist-for-pune-climate" class="enitre_mouse">Industrial Fan Maintenance Checklist for Pune Climate</a></h6>
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="how-to-maintain-and-extend-the-life-of-industrial-fans" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
-                        <img src="images/blogs/how-to-maintain-and-extend-the-life-of-industrial-fans.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                        <img src="images/blogs/industrial-fan-maintanance-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
                     </div>
                 </a>
                 <div class="yellow-strip">
