--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,9 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+           <a href="industrial-fan-maintenance-checklist-for-pune-climate">&emsp;-&nbsp;Industrial Fan Maintenance Checklist for Pune Climate</a>
+        </li>
+        <li>
           <a href="how-to-maintain-and-extend-the-life-of-industrial-fans">&emsp;-&nbsp;How to Maintain and Extend the Life of Industrial Fans</a>
         </li>
         <li>
