--- a/industrial-fan-maintenance-checklist-for-pune-climate.html
+++ b/industrial-fan-maintenance-checklist-for-pune-climate.html
@@ -305,16 +305,82 @@
                         <p class="pra">
                             Pune’s changing seasons demand preventive and seasonal maintenance for industrial fans. Following this checklist will help you:
                         </p>
-                        <ul class="nw1">
+                        <ol class="nw1">
                             <br><li>Improve energy efficiency</li>
                             <li>Extend equipment lifespan</li>
                             <li>Reduce breakdowns and maintenance costs</li>
-                        </ul>
+                        </ol>
                     
                     </div>
                 </div>
+                 </div>
+<br><br>
+    <div class="container">
+        <div class="row">
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                    What is the difference between standard and heavy-duty exhaust fans?
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Standard exhaust fans are suited for small spaces like bathrooms and kitchens, offering moderate airflow and low noise. Heavy-duty fans are built for industrial and large commercial areas, providing high airflow, durability, and the ability to handle heat, smoke, and fumes.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> When should I choose a heavy-duty exhaust fan from Alfa Fans?
 
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Heavy-duty fans are ideal for factories, warehouses, workshops, and commercial kitchens where continuous operation, high airflow, and industrial-strength durability are required.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Are standard exhaust fans energy-efficient?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Yes. Alfa Fans’ standard exhaust fans are designed for small to medium spaces, providing efficient ventilation with lower energy consumption and minimal maintenance.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Can Alfa Fans’ heavy-duty exhaust fans be installed in multiple ways?
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Absolutely. They can be wall-mounted, roof-mounted, or used in inline duct systems, offering flexibility for large or complex industrial and commercial spaces.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+                    </div>
+                </div>
+           
         </div>
     </section>
     <footer>
