2nd blog for the month of November added

--- a/industrial-fan-maintenance-checklist-for-pune-climate.html
+++ b/industrial-fan-maintenance-checklist-for-pune-climate.html
@@ -328,49 +328,49 @@
                             <div class="accordion-heading">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
                                     <em class="icon-fixed-width fa fa-plus"></em>
-                                    What is the difference between standard and heavy-duty exhaust fans?
+                                    Why is industrial fan maintenance important in Pune’s climate?
                                 </a>
                             </div>
                             <div id="collapseOne" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Standard exhaust fans are suited for small spaces like bathrooms and kitchens, offering moderate airflow and low noise. Heavy-duty fans are built for industrial and large commercial areas, providing high airflow, durability, and the ability to handle heat, smoke, and fumes.
+                                    Pune’s hot summers and humid monsoon conditions can strain industrial fans. Regular maintenance ensures smooth performance, longer lifespan, and energy efficiency for Alfa Fans installations.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                                    <em class="icon-fixed-width fa fa-plus"></em> When should I choose a heavy-duty exhaust fan from Alfa Fans?
+                                    <em class="icon-fixed-width fa fa-plus"></em> How often should industrial fans be serviced in Pune?
 
                                 </a>
                             </div>
                             <div id="collapseTwo" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Heavy-duty fans are ideal for factories, warehouses, workshops, and commercial kitchens where continuous operation, high airflow, and industrial-strength durability are required.
+                                    It’s recommended to inspect and service Alfa industrial fans every 3 to 6 months, especially before and after the monsoon season, to prevent dust and moisture buildup.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-                                    <em class="icon-fixed-width fa fa-plus"></em> Are standard exhaust fans energy-efficient?
+                                    <em class="icon-fixed-width fa fa-plus"></em> Can Alfa Fans operate efficiently during Pune’s summer heat?
                                 </a>
                             </div>
                             <div id="collapseThree" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Yes. Alfa Fans’ standard exhaust fans are designed for small to medium spaces, providing efficient ventilation with lower energy consumption and minimal maintenance.
+                                    Yes. Alfa Fans are designed for high-temperature environments. Regular cleaning of dust and checking motor cooling systems ensures consistent airflow even during peak summer.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                                    <em class="icon-fixed-width fa fa-plus"></em> Can Alfa Fans’ heavy-duty exhaust fans be installed in multiple ways?
+                                    <em class="icon-fixed-width fa fa-plus"></em> What should be included in an industrial fan maintenance checklist?
                                 </a>
                             </div>
                             <div id="collapseFour" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Absolutely. They can be wall-mounted, roof-mounted, or used in inline duct systems, offering flexibility for large or complex industrial and commercial spaces.
+                                    A proper checklist includes cleaning blades and guards, lubricating bearings, checking motor alignment, inspecting electrical connections, and testing airflow efficiency.
                                 </div>
                             </div>
                         </div>
