--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,10 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+           <a href="choosing-between-axial-centrifugal-and-tube-axial-fans">&emsp;-&nbsp;Choosing Between Axial, Centrifugal, and Tube Axial Fans</a>
+        </li>
+        <li>
+        <li>
            <a href="industrial-fan-maintenance-checklist-for-pune-climate">&emsp;-&nbsp;Industrial Fan Maintenance Checklist for Pune Climate</a>
         </li>
         <li>
