blog layout fixed

--- a/heavy-duty-exhaust-fans-vs-industrial-blowers.html
+++ b/heavy-duty-exhaust-fans-vs-industrial-blowers.html
@@ -319,20 +319,21 @@
                         </p>
 
                         <br>
-                        <h2 class="h2-heading">What Are Heavy Duty Exhaust Fans?</h2>
+                        <br>
+                        <h2 class="h2-heading">What Are Heavy Duty Exhaust Fans?</h2><br>
                         <p class="alfa_p_style">
                             Heavy-duty exhaust fans are designed to **remove contaminated air from indoor spaces**. They
                             pull air out of a facility and expel it outdoors, creating a continuous flow of fresh air.
                         </p>
                         <h5 class="nja">Key Features</h5>
-                        <ul class="list-style-type">
-                            <li>1.High airflow (CFM) capabilities</li>
-                            <li>2.Wall-mounted, roof-mounted, or ceiling-mounted</li>
-                            <li>3.Energy-efficient ventilation</li>
-                            <li>4.Ideal for removing heat, fumes, smoke, odors, and humidity</li>
-                        </ul>
+                        <ol class="list-style-type">
+                            <li>High airflow (CFM) capabilities</li>
+                            <li>Wall-mounted, roof-mounted, or ceiling-mounted</li>
+                            <li>Energy-efficient ventilation</li>
+                            <li>Ideal for removing heat, fumes, smoke, odors, and humidity</li>
+                        </ol>
                         <h5 class="nja">Common Applications</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>Warehouses</li>
                             <li>Commercial kitchens</li>
                             <li>Factories</li>
@@ -341,7 +342,7 @@
                             <li>Agricultural buildings</li>
                         </ul>
                         <h5 class="nja">Benefits</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>Simple installation</li>
                             <li>Lower energy use compared to blowers</li>
                             <li>Effective at heat and odor removal</li>
@@ -349,20 +350,20 @@
                         </ul>
                         <br>
                         <h2 class="h2-heading">What Are Industrial Blowers?</h2>
-                        <p class="alfa_p_style">
+                        <br><p class="alfa_p_style">
                             Industrial blowers (also known as industrial air blowers) are high-power mechanical devices
                             designed to **push or pull air at high pressure**. They are often used in process
                             applications rather than general ventilation.
                         </p>
                         <h5 class="nja">Key Features</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>High static pressure capability</li>
                             <li>Can move air through ducts, filters, or equipment</li>
                             <li>Available in centrifugal, axial, and regenerative designs</li>
                             <li>Built for demanding environments</li>
                         </ul>
                         <h5 class="nja">Common Applications</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>Material handling</li>
                             <li>Combustion air supply</li>
                             <li>Dust collection systems</li>
@@ -371,7 +372,7 @@
                             <li>Chemical, mining, and manufacturing processes</li>
                         </ul>
                         <h5 class="nja">Benefits</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>Superior pressure output</li>
                             <li>Works well with long duct runs</li>
                             <li>Supports specialized industrial processes</li>
@@ -430,7 +431,7 @@
                         <h2 class="h2-heading">How to Choose the Right Option for Your Facility</h2>
 
                         <h5 class="nja">Choose Heavy Duty Exhaust Fans If…</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>You need **general ventilation**.</li>
                             <li>Your goal is to remove **hot, stale, or humid air**.</li>
                             <li>Your facility has issues with **smoke or odors**.</li>
@@ -441,7 +442,7 @@
                         </p>
 
                         <h5 class="nja">Choose Industrial Blowers If…</h5>
-                        <ul class="content-list">
+                        <ol class="content-list">
                             <li>You need **high-pressure airflow**.</li>
                             <li>You’re moving air through **ducts or filters**.</li>
                             <li>Your operations involve **fumes, chemicals, or particulates**.</li>
@@ -451,7 +452,8 @@
                             **Ideal for:** Manufacturing plants, material handling systems, dust collection setup.
                         </p>
                         <br>
-                        <h2 class="h2-heading">Which One Is Best for Your Facility?</h2>
+                        <br>
+                        <h2 class="h2-heading">Which One Is Best for Your Facility?</h2><br>
                         <p class="alfa_p_style">
                             There is no one-size-fits-all answer. For **ventilation and air quality**, heavy-duty
                             exhaust fans are usually the right fit. For **process-driven or high-pressure applications**,
@@ -462,43 +464,14 @@
                                 the two** may be ideal.
                         </p>
                         <br>
-                        <h2 class="h2-heading">Final Thoughts</h2>
+                        <br>
+                        <h2 class="h2-heading">Final Thoughts</h2><br>
                         <p class="alfa_p_style">
                             Whether you choose a heavy-duty exhaust fan or an industrial blower, the right system will
                             improve efficiency, safety, and overall workplace comfort. Assessing your airflow
                             requirements, environmental needs, and operational goals will help you make the best
                             decision.
                         </p>
-
-                        <div class="shares-col">
-                            <p>Shares</p>
-                            <div class="header-socials">
-                                <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i
-                                        class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg"
-                                    target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i
-                                        class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <div class="leave-reply-column">
-                            <h4>Leave a Reply</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-field input-halfrght">
-                                    <input name="name" type="text" class="form-input" value="Full Name*">
-                                </div>
-                                <div class="col-md-6 form-field input-halflft">
-                                    <input name="name" type="text" class="form-input" value="Email*">
-                                </div>
-                                <div class="col-lg-12 col-md-12 form-field">
-                                    <textarea name="name" cols="1" rows="2" class="form-comment">Comment*</textarea>
-                                </div>
-                                <div class="col-md-12 form-field">
-                                    <input name="name" type="button" class="form-submit-btn" value="Post Comment">
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 </div>
