3rd blog for the month of november added

--- a/blog.html
+++ b/blog.html
@@ -155,6 +155,28 @@
 
     <div class="container" id="blogContainer">
          <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="heavy-duty-exhaust-fans-vs-industrial-blowers" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/Heavy-Exhaust-Fans-vs-Industrial-Blowers-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>18</h5>
+                        <span>November
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="heavy-duty-exhaust-fans-vs-industrial-blowers" class="enitre_mouse">
+                    <h6><a href="heavy-duty-exhaust-fans-vs-industrial-blowers" class="enitre_mouse">Comparing Heavy Duty Exhaust Fans vs. Industrial Blowers</a></h6>
+                </a>
+            </div>
+
              <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="choosing-between-axial-centrifugal-and-tube-axial-fans" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
