--- a/heavy-duty-exhaust-fans-vs-industrial-blowers.html
+++ b/heavy-duty-exhaust-fans-vs-industrial-blowers.html
@@ -286,12 +286,12 @@
                     <div class="blog-list-cl mar-btmnone">
                         <div class="blog-img">
                             <span class="image_hover ">
-                                <img src="images/blogs/optimized-fan-perfomance-big-size.png" class="img-responsive zoom_img_effect"
+                                <img src="images/blogs/Heavy-Exhaust-Fans-vs-Industrial-Blowers-big-img.png" class="img-responsive zoom_img_effect"
                                     alt="Diagram illustrating an exhaust fan and an industrial blower"
                                     title="Heavy Duty Exhaust Fans vs. Industrial Blowers">
                             </span>
                             <div class="blog-timing">
-                                <h5>19</h5>
+                                <h5>18</h5>
                                 <span>Nov</span>
                             </div>
                         </div>
@@ -432,36 +432,36 @@
 
                         <h5 class="nja">Choose Heavy Duty Exhaust Fans If…</h5>
                         <ol class="content-list">
-                            <li>You need **general ventilation**.</li>
-                            <li>Your goal is to remove **hot, stale, or humid air**.</li>
-                            <li>Your facility has issues with **smoke or odors**.</li>
-                            <li>You need a **cost-effective, energy-efficient solution**.</li>
+                            <li>You need general ventilation.</li>
+                            <li>Your goal is to remove hot, stale, or humid air.</li>
+                            <li>Your facility has issues with smoke or odors.</li>
+                            <li>You need a cost-effective, energy-efficient solution.</li>
                         </ul>
                         <p class="alfa_p_style">
-                            **Ideal for:** Warehouses, workshops, commercial kitchens, storage areas.
+                            Ideal for: Warehouses, workshops, commercial kitchens, storage areas.
                         </p>
 
                         <h5 class="nja">Choose Industrial Blowers If…</h5>
                         <ol class="content-list">
-                            <li>You need **high-pressure airflow**.</li>
-                            <li>You’re moving air through **ducts or filters**.</li>
-                            <li>Your operations involve **fumes, chemicals, or particulates**.</li>
-                            <li>You have **specialized industrial processes**.</li>
+                            <li>You need high-pressure airflow.</li>
+                            <li>You’re moving air through ducts or filters.</li>
+                            <li>Your operations involve fumes, chemicals, or particulates.</li>
+                            <li>You have specialized industrial processes.</li>
                         </ul>
                         <p class="alfa_p_style">
-                            **Ideal for:** Manufacturing plants, material handling systems, dust collection setup.
+                            Ideal for: Manufacturing plants, material handling systems, dust collection setup.
                         </p>
                         <br>
                         <br>
                         <h2 class="h2-heading">Which One Is Best for Your Facility?</h2><br>
                         <p class="alfa_p_style">
-                            There is no one-size-fits-all answer. For **ventilation and air quality**, heavy-duty
-                            exhaust fans are usually the right fit. For **process-driven or high-pressure applications**,
+                            There is no one-size-fits-all answer. For ventilation and air quality, heavy-duty
+                            exhaust fans are usually the right fit. For process-driven or high-pressure applications,
                             industrial blowers deliver the performance you need.
                         </p>
                         <p class="alfa_p_style">
-                            If your facility requires both ventilation and specialized airflow systems, a **combination of
-                                the two** may be ideal.
+                            If your facility requires both ventilation and specialized airflow systems, a combination of
+                                the two may be ideal.
                         </p>
                         <br>
                         <br>
