--- a/sitemap.html
+++ b/sitemap.html
@@ -172,7 +172,7 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
-           <a href="choosing-between-axial-centrifugal-and-tube-axial-fans">&emsp;-&nbsp;Choosing Between Axial, Centrifugal, and Tube Axial Fans</a>
+           <a href="heavy-duty-exhaust-fans-vs-industrial-blowers">&emsp;-&nbsp;Comparing Heavy Duty Exhaust Fans vs. Industrial Blowers</a>
         </li>
         <li>
         <li>
