--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,9 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="industrial-fan-buying-guide">&emsp;-&nbsp;How to Choose the Right Industrial Fan for Your Facility</a>
+        </li>
+        <li>
            <a href="heavy-duty-exhaust-fans-vs-industrial-blowers">&emsp;-&nbsp;Comparing Heavy Duty Exhaust Fans vs. Industrial Blowers</a>
         </li>
         <li>
