2nd Blog for the Month of December is added

--- a/blog.html
+++ b/blog.html
@@ -156,6 +156,27 @@
     <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="how-to-choose-ceiling-fan" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/perfect-celling-fan-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>09</h5>
+                        <span>December
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="how-to-choose-ceiling-fan" class="enitre_mouse">
+                    <h6><a href="how-to-choose-ceiling-fan" class="enitre_mouse">How to Choose the Right Ceiling Fan in 2025</a></h6>
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="pedestal-mancooler-vs-air-conditioner" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
                         <img src="images/blogs/Pedestal Mancooler vs Air Conditioner-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
