--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,10 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="how-to-choose-ceiling-fan">&emsp;-&nbsp;How to Choose the Right Ceiling Fan in 2025</a>
+        </li>
+        <li>
+        <li>
           <a href="pedestal-mancooler-vs-air-conditioner">&emsp;-&nbsp;Pedestal Mancooler vs Air Conditioner</a>
         </li>
         <li>
