--- a/blog.html
+++ b/blog.html
@@ -155,6 +155,27 @@
 
     <div class="container" id="blogContainer">
          <div class="row">
+             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="industrial-fans-in-pune-for-factories" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/Industrial-fans-pune-small.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>17</h5>
+                        <span>December
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="industrial-fans-in-pune-for-factories" class="enitre_mouse">
+                    <h6><a href="industrial-fans-in-pune-for-factories" class="enitre_mouse">Industrial Fans in Pune for Factories</a></h6>
+                </a>
+            </div>
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="how-to-choose-ceiling-fan" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
