4th blog for the month of December added

--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,10 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="industrial-fans-for-manufacturing-plants">&emsp;-&nbsp;Best Industrial Fans for Manufacturing Plants </a>
+        </li>
+        <li>
+        <li>
           <a href="how-to-choose-ceiling-fan">&emsp;-&nbsp;How to Choose the Right Ceiling Fan in 2025</a>
         </li>
         <li>
