1st blog for the month of Jan  added

--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,9 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="hvls-fans-sustainable-cooling-large-spaces">&emsp;-&nbsp;  HVLS fans for sustainable cooling in large spaces</a>
+        </li>
+        <li>
           <a href="industrial-fans-for-manufacturing-plants">&emsp;-&nbsp;Best Industrial Fans for Manufacturing Plants </a>
         </li>
         <li>
