--- a/blog.html
+++ b/blog.html
@@ -156,9 +156,30 @@
     <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/Advantages of Centrifugal Blowers Over Axial Fans-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>15</h5>
+                        <span>January
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">
+                    <h6><a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">Advantages of Centrifugal Blowers Over Axial Fans</a></h6>
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="right-industrial-fan-for-factory-mumbai" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
-                        <img src="images/blogs/Industrial-fan-for-Mumbai-Facility-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                        <img src="images/blogs/Industrial-fan-for-Mumbai-Facility-big-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
                     </div>
                 </a>
                 <div class="yellow-strip">
