--- a/sitemap.html
+++ b/sitemap.html
@@ -172,7 +172,10 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
-          <a href="hvls-fans-sustainable-cooling-large-spaces">&emsp;-&nbsp;  HVLS fans for sustainable cooling in large spaces</a>
+          <a href="advantages-of-centrifugal-blowers-over-axial-fans">&emsp;-&nbsp;Advantages of Centrifugal Blowers Over Axial Fans</a>
+        </li>
+        <li>
+          <a href="hvls-fans-sustainable-cooling-large-spaces">&emsp;-&nbsp;HVLS fans for sustainable cooling in large spaces</a>
         </li>
         <li>
           <a href="industrial-fans-for-manufacturing-plants">&emsp;-&nbsp;Best Industrial Fans for Manufacturing Plants </a>
