--- a/advantages-of-centrifugal-blowers-over-axial-fans.html
+++ b/advantages-of-centrifugal-blowers-over-axial-fans.html
@@ -38,7 +38,7 @@
     }
     .blog-content h2 {
         font-size: 26px;
-        color: #b4e511; 
+        color: #007bff; 
         margin-top: 30px;
         margin-bottom: 15px;
         font-weight: 600;
