--- a/hvls-fans-sustainable-cooling-large-spaces.html
+++ b/hvls-fans-sustainable-cooling-large-spaces.html
@@ -40,6 +40,8 @@
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         .list { list-style: inside !important; }
         .wdt-100 { width: 100%; height: 70px; float: left; }
@@ -300,41 +302,76 @@
                             HVLS fans are the <b>best sustainable cooling solution for large spaces</b>, combining energy efficiency, environmental benefits, and superior airflow. They are an ideal choice for businesses aiming to reduce operational costs while maintaining a comfortable and productive environment.
                         </p>
 
-                        <br><br>
-                        <div class="shares-col">
-                            <p>Shares</p>
-                            <div class="header-socials">
-                                <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i
-                                            class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg"
-                                    target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i
-                                            class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <!-- FAQ -->
+   <br><br><br>
+   <section class="">
+    <div class="container">
+        <div class="row">
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                   What industries commonly use HVLS fans?
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                  Warehouses, factories, airports, shopping malls, gyms, and sports facilities commonly use HVLS fans.
+                                </div>
                             </div>
                         </div>
-                        <div class="leave-reply-column">
-                            <h4>Leave a Reply</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-field input-halfrght">
-                                    <input name="name" type="text" class="form-input" value="Full Name*">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Why choose Alfa Fans for HVLS fans?
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Alfa Fans offers high-efficiency, durable HVLS fans designed for large industrial and commercial spaces.
                                 </div>
-                                <div class="col-md-6 form-field input-halflft">
-                                    <input name="name" type="text" class="form-input" value="Email*">
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What makes Alfa Fans’ industrial fans future-ready?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                   Alfa Fans uses smart, energy-efficient, and eco-friendly technology, including IoT monitoring and VFD motors, for sustainable and efficient ventilation.
                                 </div>
-                                <div class="col-lg-12 col-md-12 form-field">
-                                    <textarea name="name" cols="1" rows="2" class="form-comment">Comment*</textarea>
-                                </div>
-                                <div class="col-md-12 form-field">
-                                    <input name="name" type="button" class="form-submit-btn" value="Post Comment">
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Are there energy-efficient industrial fans for better air quality??
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Modern fans use IoT-enabled controls, energy-efficient motors, and VFDs to optimize airflow while reducing energy consumption.
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+                    </div>
+                </div>
+                </div>
         </div>
     </section>
-    
     <footer>
         <div class="yellow-background solution-available text-center">
             <div class="container">
