--- a/about.html
+++ b/about.html
@@ -11,11 +11,7 @@
       industrial fans wholesalers - Air circulators , Man coolers , Tubular Fans | Industrial Pedastal Fans
       manufacturers</title>
    <meta name="description"
-      content="Alfa Fans was founded in 1981 and has been growing ever since.
-                                    Alfa Fans is a leading Manufacturer, Wholesaler and Exporter of Industrial Fans 
-                                    such as Industrial Pedastal Fans, Wall Mount Fans, Exhaust Fans, Tubular Fans, 
-                                    Axial Flow Fans, Man Coolers, Centrifugal Blowers and more.  All Alfa fans are available in various
-                                    models. we started our business with the sole motto to provide best of our products to our clients.">
+      content="Trusted since 1981, Alfa Fans is a premier Manufacturer of quality Industrial Fans. We supply Man Coolers, Wall Mounts, and Blowers globally.">
 
    <meta name="keywords" content=" Industrial_Fan_Manufacturer_In_India, Exhaust_Fan_Manufactuer_In_India   
    ">
