--- a/advantages-of-centrifugal-blowers-over-axial-fans.html
+++ b/advantages-of-centrifugal-blowers-over-axial-fans.html
@@ -28,6 +28,8 @@
   </script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     /* Custom styles for the blog content to match your site theme */
     .blog-content h1 {
@@ -192,7 +194,7 @@
                                     alt="Centrifugal Blower vs Axial Fan" title="Centrifugal Blowers Advantages">
                             </span>
                             <div class="blog-timing">
-                                <h5>15</h5>
+                                <h5>14</h5>
                                 <span>January</span>
                             </div>
                         </div>
@@ -290,108 +292,171 @@
         </div>
       </div>
     </div>
-  </section>
-  <footer>
-    <div class="yellow-background solution-available text-center">
-      <div class="container">
-        <h5>For Any Solution We Are Available For You</h5>
-        <a data-animation="animated fadeInUp" class="header-requestbtn contactus-btn hvr-bounce-to-right"
-          href="contact">Contact us</a>
-      </div>
-    </div>
-    <div class="ftr-section">
-      <div class="container">
+  <!-- FAQ -->
+   <br><br><br>
+   <section class="">
+    <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <img src="images/alfa-logo-2.png" class="img-responsive" alt="industrial_centrifugal_blowers"><br>
-            <p class="marbtm20 line-height26">Alfa Fans was founded in 1981 and has been growing ever since.
-              Alfa Fans is a Leading Manufacturer , Wholesaler and Exporter Of High Quality Heavy Duty
-              Industrial Fans In Mumbai , India.</p>
-            <div class="header-socials footer-socials">
-              <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i class="fa fa-facebook"
-                  aria-hidden="true"></i></a>
-              <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg"
-                target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i class="fa fa-linkedin"
-                  aria-hidden="true"></i></a>
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                   What is the main difference between a centrifugal blower and an axial fan?
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+A centrifugal blower generates high pressure by throwing air outward, while an axial fan moves air parallel to the shaft at low pressure.                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Why choose Alfa Fans for centrifugal blowers?
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                   Alfa Fans offers high-quality, energy-efficient centrifugal blowers designed for industrial applications in Mumbai.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What makes Alfa Fans’ industrial fans future-ready?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                   Alfa Fans uses smart, energy-efficient, and eco-friendly technology, including IoT monitoring and VFD motors, for sustainable and efficient ventilation.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What industries commonly use centrifugal blowers?
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Cement plants, chemical industries, foundries, power plants, and HVAC systems commonly use centrifugal blowers.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 ftr-sol-column">
-            <h6>Our Products</h6>
-            <ul class="footer-link">
-              <li><a href="air-circulator">Air Circulators Fans</a></li>
-              <li><a href="man-cooler">Man Coolers</a></li>
-              <li><a href="heavy-duty-exhaust">Heavy Duty Exhaust Fans</a></li>
-              <li><a href="Tube-Axial-Fan">Tube Axial Fans</a></li>
-              <li><a href="Centrifugal-Blowers">Centrifugal Blowers</a></li>
-              <li><a href="domestic-fan">Domestic Fans</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2 col-sm-6 col-xs-12 ftr-link-column">
-            <h6>Quick Links</h6>
-            <ul class="footer-link">
-              <li><a href="about">About Us</a></li>
-              <li><a href="blog">Blogs</a></li>
-              <li><a href="contact">Request A Quote</a></li>
-              <li><a href="sitemap">Sitemap</a></li>
-              <li><a href="areas-we-serve">Areas We Serve</a></li>
-            </ul>
-          </div>
-          <div class="col-md-1 col-sm-6 col-xs-12">
-            <ul class="footer-info">
-              <li class="ftr-loc">Gala No. 19, 2nd Floor,<br>Bail Bazar, Mumbai - 400070,<br> Maharashtra, India</li>
-              <li class="ftr-support">Working Hours-<br>9am to 7pm</li>
-            </ul>
-          </div>
-          <div class="col-md-1 col-sm-6 col-xs-12">
-            <ul>
-              <ul class="footer-info">
-                <li class="ftr-phn"> <a href="tel:+91 99676 28344" style="color: #ffff;">+91 99676 28344</a> <br> <a
-                    href="tel:+91 99676 27345" style="color: #fff;">+91 99676 27345</a> <br> <a
-                    href="tel:+91 88 5002 0455" style="color: #fff;">+91 88 500 20455</a> <br><a
-                    href="tel:+91 8976373396" style="color: #fff;">+91 89763 73396</a></li>
-                <li class="ftr-msg"><a href="mailto:info@alfafans.in" style="color:#fff;">info@alfafans.in</a></li>
-              </ul>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-btm">
-          <div class="col-md-6 col-sm-6 col-xs-12 pad-left_zero pad-right_zero">
-            <p>Copyright ©
-              <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.
-            </p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 pad-left_zero pad-right_zero pull-right">
-            <p class="text-right">Developed by: <a href="http://visionarybizz.com/" target="_blank">Visionary
-                Services</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-  
-  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-body">
-          <h3>Search</h3>
-          <div class="search-form">
-            <input type="text" class="search_lightbox_input" placeholder="Search...">
-            <input type="text" class="search_lghtbox_btn">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/custom.js"></script>
 
-  <a href="https://api.whatsapp.com/send?phone=918850020455&text=Hi%21%20I%20am%20Interested%20In%20Alfa%20Fans%20Products."
-    class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
-  </a>
+                    </div>
+                </div>
+                </div>
+        </div>
+    </section>
+    <footer>
+        <div class="yellow-background solution-available text-center">
+            <div class="container">
+                <h5>For Any Solution We Are Available For You</h5>
+                <a data-animation="animated fadeInUp" class="header-requestbtn contactus-btn hvr-bounce-to-right" href="contact">Contact us</a>
+            </div>
+        </div>
+        <div class="ftr-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="images/alfa-logo-2.png" class="img-responsive" alt="industrial_centrifugal_blowers"><br>
+                        <p class="marbtm20 line-height26">
+                            Alfa Fans was founded in 1981 and has been growing ever since.
+                            Alfa Fans is a Leading Manufacturer , Wholesaler and Exporter Of High Quality Heavy Duty
+                            Industrial Fans In Mumbai , India.
+                        </p>
+                        <div class="header-socials footer-socials">
+                            <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6 col-xs-12 ftr-sol-column">
+                        <h6>Our Products</h6>
+                        <ul class="footer-link">
+                            <li><a href="air-circulator">Air Circulators Fans</a></li>
+                            <li><a href="man-cooler">Man Coolers</a></li>
+                            <li><a href="heavy-duty-exhaust">Heavy Duty Exhaust Fans</a></li>
+                            <li><a href="Tube-Axial-Fan">Tube Axial Fans</a></li>
+                            <li><a href="Centrifugal-Blowers">Centrifugal Blowers</a></li>
+                            <li><a href="domestic-fan">Domestic Fans</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-2 col-sm-6 col-xs-12 ftr-link-column">
+                        <h6>Quick Links</h6>
+                        <ul class="footer-link">
+                            <li><a href="about">About Us</a></li>
+                            <li><a href="blog">Blogs</a></li>
+                            <li><a href="contact">Request A Quote</a></li>
+                            <li><a href="sitemap">Sitemap</a></li>
+                            <li><a href="areas-we-serve">Areas We Serve</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-1 col-sm-6 col-xs-12">
+                        <ul class="footer-info">
+                            <li class="ftr-loc">Gala No. 19, 2nd Floor,<br>Bail Bazar, Mumbai - 400070,<br> Maharashtra, India</li>
+                            <li class="ftr-support">Working Hours-<br>9am to 7pm</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-1 col-sm-6 col-xs-12">
+                        <ul class="footer-info">
+                            <li class="ftr-phn">
+                                <a href="tel:+919967628344" style="color: #ffff;">+91 99676 28344</a> <br>
+                                <a href="tel:+919967627345" style="color: #fff;">+91 99676 27345</a> <br>
+                                <a href="tel:+918850020455" style="color: #fff;">+91 88 500 20455</a> <br>
+                                <a href="tel:+918976373396" style="color: #fff;">+91 89763 73396</a>
+                            </li>
+                            <li class="ftr-msg"><a href="mailto:info@alfafans.in" style="color:#fff;">info@alfafans.in</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="footer-btm">
+                    <div class="col-md-6 col-sm-6 col-xs-12 pad-left_zero pad-right_zero">
+                        <p>Copyright © <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12 pad-left_zero pad-right_zero pull-right">
+                        <p class="text-right">Developed by: <a href="http://visionarybizz.com/" target="_blank">Visionary Services</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h3>Search</h3>
+                    <div class="search-form">
+                        <input type="text" class="search_lightbox_input" placeholder="Search...">
+                        <input type="text" class="search_lghtbox_btn">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/custom.js"></script>
+
+    <a href="https://api.whatsapp.com/send?phone=918850020455&text=Hi%21%20I%20am%20Interested%20In%20Alfa%20Fans%20Products." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
 </body>
-
 </html>
