--- a/index.html
+++ b/index.html
@@ -977,15 +977,15 @@ Check out our website to know more or contact us now.
 
 
                       <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
+                <a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
-                        <img src="images/blogs/portable-hvls-fan-manufacturer-in-india (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                        <img src="images/blogs/Advantages of Centrifugal Blowers Over Axial Fans-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
                     </div>
                 </a>
                 <div class="yellow-strip">
                     <div class="news-time">
-                        <h5>13th</h5>
-                        <span>August
+                        <h5>15th</h5>
+                        <span>January
                         </span>
                     </div>
                     <ul class="admin alfa_ul_style">
@@ -993,23 +993,22 @@ Check out our website to know more or contact us now.
                         <li>Comments :34 </li>
                     </ul>
                 </div>
-                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
-                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
-                    <h6><a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">Portable HVLS Fan: The Ultimate Cooling Solution</a></h6>            
+                <a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">
+                    <h6></h6><a href="advantages-of-centrifugal-blowers-over-axial-fans" class="enitre_mouse">Advantages of Centrifugal Blowers Over Axial Fans</a></h6>            
             </div>
 
 
 
                      <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
+                <a href="Rright-industrial-fan-for-factory-mumbai" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
-                        <img src="images/blogs/what-are-the-benefits-of-vibration-monitoring-for-industrial-fans (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
+                        <img src="images/blogs/Industrial-fan-for-Mumbai-Facility-big-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
                     </div>
                 </a>
                 <div class="yellow-strip">
                     <div class="news-time">
-                        <h5>2th</h5>
-                        <span>August
+                        <h5>05th</h5>
+                        <span>January
                         </span>
                     </div>
                     <ul class="admin alfa_ul_style">
@@ -1017,23 +1016,22 @@ Check out our website to know more or contact us now.
                         <li>Comments :34 </li>
                     </ul>
                 </div>
-                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
-                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
-                    <h6><a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">What Are the Benefits of Vibration Monitoring for Industrial Fans?</a></h6>            
+                <a href="right-industrial-fan-for-factory-mumbai" class="enitre_mouse">
+                    <h6><a href="right-industrial-fan-for-factory-mumbai" class="enitre_mouse">Right Industrial Fan for Mumbai Factory</a></h6>            
             </div>
 
 
 
                                         <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
+                        <a href="hvls-fans-sustainable-cooling-large-spaces" class="enitre_mouse">
                             <div class="shadow_effect effect-apollo">
-                                <img src="images/blogs/why-proper-ventilation-is-critical-in-commercial-buildings.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
+                                <img src="images/blogs/HVLS-fans-blog-big-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
                             </div>
                         </a>
                         <div class="yellow-strip">
                             <div class="news-time">
-                                <h5>23</h5>
-                                <span>July
+                                <h5>01</h5>
+                                <span>January
                                 </span>
                             </div>
                             <ul class="admin alfa_ul_style">
@@ -1041,9 +1039,8 @@ Check out our website to know more or contact us now.
                                 <li>Comments :34 </li>
                             </ul>
                         </div>
-                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
-                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
-                            <h6><a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">Why Proper Ventilation Is Critical In Commercial Buildings — And How Alfa Fans Help</a></h6>            
+                        <a href="hvls-fans-sustainable-cooling-large-spaces" class="enitre_mouse">
+                            <h6></h6><a href="hvls-fans-sustainable-cooling-large-spaces" class="enitre_mouse">HVLS Fans: Sustainable Cooling for Large Spaces</a></h6>            
                     </div>
                     
                    
